use post method for password reset request
