# docs/swagger.json
@@ -158,8 +158,8 @@
                 }
             }
         },
-        "/users/reset-password/{email}": {
-            "get": {
+        "/users/reset-password": {
+            "post": {
                 "consumes": [
                     "application/json"
                 ],
@@ -172,11 +172,13 @@
                 "summary": "Request password reset.",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "User e-mail address",
+                        "description": "E-mail address",
                         "name": "email",
-                        "in": "path",
-                        "required": true
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/public.RequestPasswordReset"
+                        }
                     }
                 ],
                 "responses": {
@@ -203,6 +205,14 @@
         }
     },
     "definitions": {
+        "public.RequestPasswordReset": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                }
+            }
+        },
         "public.User": {
             "type": "object",
             "properties": {
